--- a/lasvegas.css
+++ b/lasvegas.css
@@ -31,7 +31,8 @@ body {
 .main-title {
   display: flex;
   justify-content: center;
-  background-image: linear-gradient(
+  color: aliceblue;
+  /* background-image: linear-gradient(
     45deg,
     #9400d3,
     #4b0082,
@@ -43,7 +44,7 @@ body {
   );
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
 }
 
 .overlay {
@@ -97,10 +98,10 @@ body {
   transition: all 0.2s ease-in-out;
   border: 2px solid #9400d3;
   color: #fff;
-  animation: btnShadow 3s linear infinite;
+  /* animation: btnShadow 3s linear infinite; */
 }
 
-@keyframes btnShadow {
+/* @keyframes btnShadow {
   0% {
     box-shadow: 0 0 3px 3px #9400d3;
   }
@@ -113,4 +114,4 @@ body {
   100% {
     box-shadow: 0 0 3px 3px #9400d3;
   }
-}
+} */
