--- a/lasvegas.css
+++ b/lasvegas.css
@@ -98,10 +98,11 @@ body {
   transition: all 0.2s ease-in-out;
   border: 2px solid #9400d3;
   color: #fff;
-  /* animation: btnShadow 3s linear infinite; */
+  border-radius: 15px;
+  /* animation: btnBgShadow 3s linear infinite; */
 }
 
-/* @keyframes btnShadow {
+/* @keyframes btnBgShadow {
   0% {
     box-shadow: 0 0 3px 3px #9400d3;
   }
