--- a/lasvegas.css
+++ b/lasvegas.css
@@ -1,10 +1,16 @@
+@font-face {
+  font-family: RobotoCondensed;
+  src: url(RobotoCondensed.ttf);
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Roboto Condensed", sans-serif;
-  animation: imageSlider 15s linear infinite;
+  font-family: RobotoCondensed, sans-serif;
+  animation: imageSlider 20s linear infinite;
+  overflow: hidden;
 }
 
 @keyframes imageSlider {
@@ -32,19 +38,7 @@ body {
   display: flex;
   justify-content: center;
   color: aliceblue;
-  /* background-image: linear-gradient(
-    45deg,
-    #9400d3,
-    #4b0082,
-    #0000ff,
-    #00ff00,
-    #ffff00,
-    #ff7f00,
-    #ff0000
-  );
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  margin-top: 2rem;
 }
 
 .overlay {
@@ -54,6 +48,7 @@ body {
   height: 100vh;
   padding: 20px;
   overflow-x: hidden;
+  margin-top: -1.5rem;
 }
 
 .container-1,
@@ -64,6 +59,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: -0.5rem;
 }
 
 .description-title {
@@ -75,7 +71,7 @@ body {
 
 .description {
   margin-top: -4px;
-  line-height: 20px;
+  line-height: 22px;
   font-weight: bold;
   color: #64ccde;
 }
@@ -86,6 +82,7 @@ body {
   color: #d5d1d1;
   padding: 5px;
   margin-top: 15px;
+  margin-bottom: 0.1rem;
   border: 2px solid #fff;
   text-transform: uppercase;
   border-radius: 10px;
@@ -99,20 +96,4 @@ body {
   border: 2px solid #9400d3;
   color: #fff;
   border-radius: 15px;
-  /* animation: btnBgShadow 3s linear infinite; */
 }
-
-/* @keyframes btnBgShadow {
-  0% {
-    box-shadow: 0 0 3px 3px #9400d3;
-  }
-  50% {
-    box-shadow: 0 0 3px 3px #ff0000;
-  }
-  80% {
-    box-shadow: 0 0 3px 3px #64ccde;
-  }
-  100% {
-    box-shadow: 0 0 3px 3px #9400d3;
-  }
-} */
