--- a/las-vegas-events/events.css
+++ b/las-vegas-events/events.css
@@ -12,16 +12,24 @@ body {
   overflow-x: hidden;
 }
 
-.container1 {
+/* Hoved tittel */
+h2 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  font-size: xx-large;
+}
+
+/* Hoved kontainer */
+.container {
+  display: flex;
+  justify-content: space-around;
   margin-top: 5rem;
   align-items: center;
 }
 
-/* @media (max-width: 1468px) {
-  .container1 {
-    display: flex;
+/* ved Skjermoppøsning 846px eller mindre */
+@media screen and (max-width: 864px) {
+  .container {
     flex-direction: column;
     align-items: center;
   }
@@ -29,8 +37,9 @@ body {
   .sub-container {
     margin-bottom: 2rem;
   }
-} */
+}
 
+/* Sub kontainer (selve kortet) */
 .sub-container {
   display: flex;
   flex-direction: column;
@@ -40,16 +49,14 @@ body {
   border: 1px solid #cccccc;
 }
 
-img {
-  width: 100%;
-}
-
+/* Kort overskrift */
 .sub-container h3 {
   margin-left: 1rem;
   margin-top: 2rem;
   font-size: x-large;
 }
 
+/* Kort beskrivelse */
 .sub-container p {
   margin-left: 1rem;
   margin-bottom: 2rem;
@@ -59,6 +66,7 @@ img {
   padding-right: 1rem;
 }
 
+/* Kort knappen */
 .sub-container a {
   text-decoration: none;
   border: 2px solid #000;
@@ -99,7 +107,6 @@ a:hover {
 }
 
 .catagory {
-  /* position: absolute; */
   margin-top: -21px;
   margin-left: -8px;
   z-index: 3;
