--- a/las-vegas-history/history.css
+++ b/las-vegas-history/history.css
@@ -64,7 +64,7 @@ span {
 }
 
 /* Media Query for skjermoppløsning under 950px */
-@media (max-width: 950px) {
+@media screen and (max-width: 950px) {
   .container {
     flex-direction: column;
     align-items: center;
